Machine-Learning-Foundation-Nanodegree/Boston-Housing-Dataset/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Boston-Housing-Dataset
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=0e7982bcfaa3f70169a9093ebc016c36ee6df8c16e7329b4
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=0e7982bcfaa3f70169a9093ebc016c36ee6df8c16e7329b4
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook boston_housing.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 1944f46d-0ca4-4820-adb1-3136e643687c
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 1944f46d-0ca4-4820-adb1-3136e643687c
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Saving file at /boston_housing.ipynb
[NotebookApp | INFO] Starting buffering for 1944f46d-0ca4-4820-adb1-3136e643687c:6393f78b5a7a4a9698359e4527ff8b42
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: 1944f46d-0ca4-4820-adb1-3136e643687c
